fix: Corrige mudanca de width de paginas devido a alternancia de visibilidade da scrollbar, fazendo a scrollbar sempre visivel porem com a cor do fundo

--- a/src/scss/extends.scss
+++ b/src/scss/extends.scss
@@ -6,7 +6,7 @@
 
 %custom-scrollbar {
   &::-webkit-scrollbar-track {
-    background-color: #181818 !important;
+    background-color: #121212 !important;
   }
   &::-webkit-scrollbar {
     width: 12px !important;
