--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -26,7 +26,7 @@ main.app-main {
   @extend %custom-scrollbar;
   grid-area: main;
   position: relative;
-  overflow-y: auto;
+  overflow-y: scroll;
   background-color: #121212;
   margin-top: 0.1rem;
   margin-right: 0.1rem;
